# Brain-Pick

./: .gitignore  LICENSE  README.md  attention_mapper.pkl  flake.nix  main.py  pyproject.toml  raw_data.csv  test.db
common/: page.py  report.py  userdata.py
eeeg/: 123345.py  123456789.py  EEGModels.py  Predict.py  __init__.py  authenticate_binary_classifier.py  best_model_feature_csv.keras  category_classifier.py  check.py  data_conversion.py  data_generate.py  emotion_to_tagsreport.py  function.py  identity_classifier.py  model_training.py  personalized_emotion_classifier.py  process_training_predictions.py  python check_data.py  python fix_scaler.py  run_model.py  run_model2.py  scaler.pkl  tags_report.csv  test_emotions.csv  training_report_processor.py  training_set_predictions.csv
extraction/: __init__.py  attention_mapper.py  calibration.py  eye_extraction.py  gaze_tracker.py  tracker.py
server/: __main__.py  database.py  http.py
