[project]
name = "brain-pick"
version = "0.1.0"
description = "ETH Oxford 2026 Project - Utilising EEG and eye tracking to find the interest point within rich media contents."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlib>=20.0.0",
    "opencv-python>=4.13.0.92",
    "scikit-learn>=1.8.0",
]
